[package]
name = "necklace_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24"
pyo3 = { version = "0.22", features = ["auto-initialize"] }
numpy = "0.22"
clap = { version = "4.4", features = ["derive"] }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
